--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "next": "14.1.0",
+    "bcrypt": "^5.1.1",
+    "mongodb": "^6.1.0",
+    "mongoose": "^7.6.2",
+    "next-auth": "^4.23.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
